--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
+    "print-js": "^1.6.0",
+    "save": "^2.4.0",
+    "screenfull": "^5.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "postcss-px2rem": "^0.3.0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
