--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "save": "^2.4.0",
     "screenfull": "^5.0.2",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -36,7 +37,8 @@
     "lint-staged": "^9.5.0",
     "postcss-px2rem-exclude": "^0.0.6",
     "px2rem-loader": "^0.1.9",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "eslintConfig": {
     "root": true,
