--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ali-oss": "^6.16.0",
     "axios": "^0.19.0",
     "cli": "^1.0.1",
     "core-js": "^3.6.5",
