--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "cli": "^1.0.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.0",
     "element-ui": "^2.15.6",
     "lib-flexible": "^0.3.2",
     "moment": "^2.29.1",
